--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,13 @@ description: > # this means to ignore newlines until "baseurl:"
   boorstat — simply about useless.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://boorstat.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-# twitter_username: jekyllrb
+
+twitter_username: boorstat
 github_username:  boorstat
+facebook_username: boorstat
+
 google_analytics: UA-90000862-1
+
 
 # Build settings
 markdown: kramdown
